--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>HUDHACK 2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   
-  <link rel="icon" type="image/png" href="hudhack-logo-solid-bg.png" />
+  <link rel="icon" type="image/png" href="Logo1.png" />
 
   <meta property="og:title" content="HUDHACK 2026">
   <meta property="og:description" content="Cyber Security Hackathon. Build. Break. Secure. Feb 26 @ University of Huddersfield.">
@@ -607,3 +607,4 @@
   </script>
 </body>
 </html>
+
