--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <div class="secret-content">
       <div class="secret-title">/// SYSTEM OVERRIDE ///</div>
       <p class="secret-text">KONAMI SEQUENCE RECOGNIZED. ACCESS GRANTED.</p>
-      <div class="flag-box">HUDHACK{R3TR0_G4M3R_1986}</div>
+      <div class="flag-box">HUDHACK{V1CT0R1A_T0W3R_H1GH}</div>
       <p style="color:var(--hud-teal); font-size: 0.9rem; margin-bottom: 1rem;">
         Proof of Concept found. Submit this flag to claim the bounty.
       </p>
@@ -607,4 +607,3 @@
   </script>
 </body>
 </html>
-
