--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
             HudHack is the inaugural hackathon organised by the University of Huddersfield Cyber Security Society. 
             <br><br>
             <strong>Theme: Break The Loop</strong><br>
-            For the main project-building challenge, the theme “Break The Loop” focuses on identifying everyday student problems (during their time at university or in general life), repetitive frustrations, and inefficient systems, and using technology to design practical, meaningful solutions that improve real aspects of our lives such as accessibility, sustainability, wellbeing, safety, and support. 
+            The "Break The Loop" challenge focuses on identifying <strong>any everyday frustrations or problems you’ve been having</strong>—whether they are university-specific or general issues encountered in daily life. Use technology to design practical solutions that improve real aspects of life such as accessibility, sustainability, wellbeing, safety, or support. 
             <br><br>
-            How many times have you encountered a problem and hoped for someone else to find an effective solution? This is an invitation to fix what bugs you everyday.
+            How many times have you encountered a problem and hoped for someone else to find an effective solution? This is an invitation to fix what bugs you every day.
           </p>
         </div>
         <div class="featured-grid-wrap">
@@ -514,7 +514,7 @@
             <details class="faq-item"><summary>Can I start coding beforehand?</summary><div class="faq-ans">No. All project code must be created during the event timeframe. Brainstorming and wireframing beforehand is permitted.</div></details>
             <details class="faq-item"><summary>What equipment do I need?</summary><div class="faq-ans">Please bring your own laptop and charger. Power strips and Wi-Fi will be provided at the venue.</div></details>
             <details class="faq-item"><summary>What if I don't have a team?</summary><div class="faq-ans">Don't worry! We can help you find a team on our Discord server beforehand, or we will help you find teammates on the day of the event.</div></details>
-            <details class="faq-item"><summary>How do teams work?</summary><div class="faq-ans">Teams can have between 1 and 6 members. You can also hack solo if you prefer the "lone wolf" approach.</div></details>
+            <details class="faq-item"><summary>How do teams work?</summary><div class="faq-ans">Teams can consist of <strong>up to 4 people</strong>. You can also hack solo if you prefer the "lone wolf" approach.</div></details>
             <details class="faq-item"><summary>Can non-Huddersfield students attend?</summary><div class="faq-ans">No. This event is exclusive to students currently enrolled at the University of Huddersfield. You will need your student ID for entry.</div></details>
             <details class="faq-item"><summary>Is food provided?</summary><div class="faq-ans">Yes. Food and refreshments will be provided for all attendees. Specific details on the menu and timing will be confirmed closer to the date. We will accommodate dietary requirements where possible.</div></details>
           </div>
