--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
               <div class="mode-icon">🚩</div>
               <div class="mode-info">
                 <h3 style="color:var(--hud-teal);">The Security CTF</h3>
-                <p>Solve a series of CTF challenges across various categories. Topics include <strong>Cryptography, Forensics, OSINT, Web Exploitation</strong>, and more. [cite_start]Find the "flags" to score points[cite: 83].</p>
+                <p>Solve a series of CTF challenges across various categories. Topics include <strong>Cryptography, Forensics, OSINT, Web Exploitation</strong>, and more. Find the "flags" to score points.</p>
               </div>
             </div>
           </div>
@@ -509,6 +509,7 @@
               <div class="schedule-item"><div class="time-badge">16:45</div><div class="event-name">Judging & Kahoot</div></div>
               <div class="schedule-item"><div class="time-badge" style="background:var(--hud-purple); color:white;">17:30</div><div class="event-name">Closing Ceremony</div></div>
               <div class="schedule-item"><div class="time-badge">17:45</div><div class="event-name">Food & Networking</div></div>
+              <div class="schedule-item"><div class="time-badge">19:00</div><div class="event-name">Hackathon Ends</div></div>
             </div>
           </div>
         </div>
@@ -516,7 +517,7 @@
         <div class="panel discord-panel reveal">
           <div class="p-head"><span>Community</span><div class="p-controls"><div class="dot" style="background:var(--hud-purple)"></div></div></div>
           <div class="p-body" style="text-align: center;">
-            [cite_start]<p style="color:var(--text-dim); margin-bottom:1.5rem; font-size:0.9rem;">Need a team? Have questions? Want CTF hints? Join our community server[cite: 7].</p>
+            <p style="color:var(--text-dim); margin-bottom:1.5rem; font-size:0.9rem;">Need a team? Have questions? Want CTF hints? Join our community server.</p>
             <a href="https://discord.gg/MpJk8bGSRV" class="discord-btn">>> JOIN DISCORD SERVER <<</a>
           </div>
         </div>
@@ -594,7 +595,7 @@
             <details class="faq-item"><summary>Can I start coding beforehand?</summary><div class="faq-ans">No. All project code must be created during the event timeframe. Brainstorming and wireframing beforehand is permitted.</div></details>
             <details class="faq-item"><summary>What equipment do I need?</summary><div class="faq-ans">Please bring your own laptop and charger. Power strips and Wi-Fi will be provided at the venue.</div></details>
             <details class="faq-item"><summary>What if I don't have a team?</summary><div class="faq-ans">Don't worry! We can help you find a team on our Discord server beforehand, or we will help you find teammates on the day of the event.</div></details>
-            [cite_start]<details class="faq-item"><summary>How do teams work?</summary><div class="faq-ans">Teams can consist of <strong>up to 4 people</strong>[cite: 111]. You can also hack solo if you prefer the "lone wolf" approach.</div></details>
+            <details class="faq-item"><summary>How do teams work?</summary><div class="faq-ans">Teams can consist of <strong>up to 4 people</strong>. You can also hack solo if you prefer the "lone wolf" approach.</div></details>
             <details class="faq-item"><summary>Can non-Huddersfield students attend?</summary><div class="faq-ans">No. This event is exclusive to students currently enrolled at the University of Huddersfield. You will need your student ID for entry.</div></details>
             <details class="faq-item"><summary>Is food provided?</summary><div class="faq-ans">Yes. Food and refreshments will be provided for all attendees. Specific details on the menu and timing will be confirmed closer to the date. We will accommodate dietary requirements where possible.</div></details>
           </div>
