fr final commit 011

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
         <div class="organizer-card">  
           <div class="org-photo-wrap">
-            <img src="Ibrahim.jpg" alt="Friend's Name" onerror="this.style.display='none'">
+            <img src="ibrahim.jpg" alt="Friend's Name" onerror="this.style.display='none'">
             <div class="photo-placeholder-text large">📸</div>
           </div>
           <div class="org-info">
@@ -622,3 +622,4 @@
   </script>
 </body>
 </html>
+
